[package]
name = "backyard_rain"
version = "0.1.0"
description = "Nature soundscape audio. A cozy rain ambience mix for background listening"
license = "MIT OR Apache-2.0"
authors = ["Brian Dorsey"]

edition = "2021"

[features]

# This set of features chooses which set of WAVs to embed in the firmware.
# 2m & 16mb variants are release targets for each size of card. Sine and
# micro variants allow speedier iteration while testing.
# If no variant is chosen, config will default to "audio_2mb"
audio_sine = []
audio_micro = []
audio_2mb = []
audio_16mb = []

[dependencies]
wscomp = { path = "../wscomp" }
defmt = "1.0"
defmt-rtt = "1.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
portable-atomic = { version = "1.10.0", features = ["critical-section"] }

embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["defmt", "task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt" ] }
embassy-futures = "0.1"
static_cell = "2.1.0"
audio-codec-algorithms = "0.7.0"
mutually_exclusive_features = "0.1.0"

[[bin]]
name = "backyard_rain"
test = false

[profile.release]
debug = 2
lto = true
opt-level = 'z'

